RESOLVED FIXED165144
[CSS Parser] Fix parsing of "all" in transitions
https://bugs.webkit.org/show_bug.cgi?id=165144
Summary [CSS Parser] Fix parsing of "all" in transitions
Dave Hyatt
Reported 2016-11-29 09:27:45 PST
[CSS Parser] Fix parsing of "all" in transitions
Attachments
Patch (1.51 KB, patch)
2016-11-29 09:29 PST, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-11-29 09:29:24 PST
Dave Hyatt
Comment 2 2016-11-29 09:37:13 PST
Fixed in r209075.
Note You need to log in before you can comment on or make changes to this bug.