[CSS Parser] Fix parsing of "all" in transitions https://bugs.webkit.org/show_bug.cgi?id=165144

Reviewed by Dean Jackson.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeTransitionProperty):



Canonical link: https://commits.webkit.org/182765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209075 268f45cc-cd09-0410-ab3c-d52691b4dbfc